--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <section class="page-header">
             <h1 style="color:#FFD700">STEAMtern</h1>
             <p class="lead">Discover...Intern...Anywhere!</p>
-            <p><a class="btn btn-lg btn-primary" href="index.html#home-signup" id="signup-btn-top">Sign up for our private beta</a></p>
+            <p><a class="btn btn-lg btn-primary" href="index.html#home-signup" id="signup-btn-top">Sign me up</a></p>
             <p><a class="continue" href="index.html#home-problem">Learn more</a></p>
           </section>
         </div>
@@ -80,7 +80,7 @@
         <div class="row">
           <section class="page-header">
             <h2>Are you searching for an internship?</h2>
-            <p class="lead">Ambitious students want discover practical experiences and formal training opportunities in various professional fields</p>
+            <p class="lead">Ambitious students want to discover practical experiences and engage in formal training opportunities within their various professional fields</p>
             <p class="lead">Science, Technology, Engineering, Arts & Mathematics</p>
           </section>
           <section class="page-content">
@@ -99,7 +99,7 @@
             </span>
             <span style="width:50%;">
               <h2>Increase your job prospects</h2>
-              <p class="lead">STEAMtern collects, curates and maintains a databse containing a wide array of internships<br>
+              <p class="lead">STEAMtern collects, curates and maintains a databse containing a wide array of internships<br/>
               Our audacious goal is to provide a streamlined access to students hunting for intership opportunities</p>
             </span>
             </div>
@@ -115,7 +115,8 @@
         <div class="row">
           <section class="page-header">
             <h2>10 people have already signed up</h2>
-            <p class="lead">Become the one of the first to join us in this exciting journey. Leave your full name and email address below, and we’ll send you an invitation to check out our mobile app.</p>
+            <p class="lead">Become the one of the first to join us in this exciting journey <br/>
+             Leave your full name and email address below, and we’ll send you an invitation to check out our mobile app</p>
           </section>
           <section class="page-form" id="mc_embed_signup">
             <form action="#" class="validate" id="mc-embedded-subscribe-form" method="post" name="mc-embedded-subscribe-form" novalidate="" target="_blank"> <!--http://eterni.us3.list-manage.com/subscribe/post?u=9a223e3648b6f6c8cab84d34a&amp;id=5b0aa5f306-->
