--- a/index.html
+++ b/index.html
@@ -30,14 +30,11 @@
   <meta content="steamtern.com" property="og:url">
   <meta content="/assets/img/og-image.png" property="og:image">
   <link href="assets/stylesheets/app.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-2.1.3.min.js">
-  </script>
-  <script src="http://cdn.jsdelivr.net/jquery.scrollto/2.1.0/jquery.scrollTo.min.js">
-  </script>
-  <script src="http://cdn.jsdelivr.net/jquery.localscroll/1.4.0/jquery.localScroll.min.js">
-  </script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js">
-  </script>
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="http://cdn.jsdelivr.net/jquery.scrollto/2.1.0/jquery.scrollTo.min.js"></script>
+  <script src="http://cdn.jsdelivr.net/jquery.localscroll/1.4.0/jquery.localScroll.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
   <header id="page-header">
@@ -68,7 +65,7 @@
         <div class="row">
           <section class="page-header">
             <h1 style="color:#FFD700">STEAMtern</h1>
-            <p class="lead">Discover...Intern...Anywhere!</p>
+            <p class="lead">Discover... Intern... Anywhere!</p>
             <p><a class="btn btn-lg btn-primary" href="index.html#home-signup" id="signup-btn-top">Sign me up</a></p>
             <p><a class="continue" href="index.html#home-problem">Learn more</a></p>
           </section>
@@ -114,12 +111,20 @@
       <div class="container">
         <div class="row">
           <section class="page-header">
-            <h2>10 people have already signed up</h2>
+
+            <h2 id="usercount"> people have already signed up</h2>
+
+          <script>
+              var url = 'http://d45908604ceebeb5150a.herokuapp.com/api/user/count'
+              $.get( url, function(data) {
+                $('h2#usercount').html(data.value + $('h2#usercount').html());
+              })
+          </script>
             <p class="lead">Become the one of the first to join us in this exciting journey <br/>
              Leave your full name and email address below, and we’ll send you an invitation to check out our mobile app</p>
           </section>
           <section class="page-form" id="mc_embed_signup">
-            <form action="#" class="validate" id="mc-embedded-subscribe-form" method="post" name="mc-embedded-subscribe-form" novalidate="" target="_blank"> <!--http://eterni.us3.list-manage.com/subscribe/post?u=9a223e3648b6f6c8cab84d34a&amp;id=5b0aa5f306-->
+            <form class="validate" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" onsubmit="signUpUser(this);"> <!--http://eterni.us3.list-manage.com/subscribe/post?u=9a223e3648b6f6c8cab84d34a&amp;id=5b0aa5f306-->
               <div class="clear" id="mce-responses">
                 <div class="response" id="mce-error-response" style="display:none"></div>
                 <div class="response" id="mce-success-response" style="display:none"></div>
@@ -140,6 +145,8 @@
               </div>
             </form>
           </section>
+
+          <script src="assets/scripts/main.js" type="text/javascript"/>
           <script src="http://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js" type="text/javascript">
           </script>
           <script type="text/javascript">
