--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="row">
           <section class="page-header">
 
-            <h2 id="usercount"> 10 people have already signed up</h2>
+            <h2 id="usercount"> people have already signed up</h2>
 
           <script>
               var url = 'http://d45908604ceebeb5150a.herokuapp.com/api/user/count'
